fix button issues, fix Head Body whitespace issue

--- a/src/css/mainstyle.css
+++ b/src/css/mainstyle.css
@@ -55,7 +55,7 @@
 }
 .layer-top {
   z-index: 9999;
-  position: relative;
+  position: absolute;
 }
 .striping_effect {
   background-image: linear-gradient(
@@ -168,6 +168,7 @@ footer {
   padding-top: 0.15rem;
   padding-bottom: 0.15rem;
   outline: none;
+  z-index: 10000;
 }
 .nav_bar {
   position: absolute;
